- hero section complete

--- a/assets/output.css
+++ b/assets/output.css
@@ -611,6 +611,22 @@ video {
   }
 }
 
+.btn-primary{
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 122 129 / var(--tw-bg-opacity));
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .flex{
   display: flex;
 }
@@ -629,6 +645,78 @@ video {
 
 .h-6{
   height: 1.5rem;
+}
+
+.max-h-\[\]{
+  max-height: ;
+}
+
+.max-h-\[450px\]{
+  max-height: 450px;
+}
+
+.max-w-\[10ch\]{
+  max-width: 10ch;
+}
+
+.max-w-\[100px\]{
+  max-width: 100px;
+}
+
+.max-w-\[100ch\]{
+  max-width: 100ch;
+}
+
+.max-w-\[1ch\]{
+  max-width: 1ch;
+}
+
+.max-w-\[5ch\]{
+  max-width: 5ch;
+}
+
+.max-w-\[15ch\]{
+  max-width: 15ch;
+}
+
+.max-w-\[20ch\]{
+  max-width: 20ch;
+}
+
+.max-w-\[\]{
+  max-width: ;
+}
+
+.max-w-\[2\]{
+  max-width: 2;
+}
+
+.max-w-\[25ch\]{
+  max-width: 25ch;
+}
+
+.max-w-\[50ch\]{
+  max-width: 50ch;
+}
+
+.max-w-\[55ch\]{
+  max-width: 55ch;
+}
+
+.max-w-\[70ch\]{
+  max-width: 70ch;
+}
+
+.max-w-\[75ch\]{
+  max-width: 75ch;
+}
+
+.max-w-\[81ch\]{
+  max-width: 81ch;
+}
+
+.max-w-\[80ch\]{
+  max-width: 80ch;
 }
 
 .flex-col{
@@ -655,6 +743,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-6{
+  gap: 1.5rem;
+}
+
 .gap-8{
   gap: 2rem;
 }
@@ -672,9 +764,18 @@ video {
   border-color: rgb(219 234 254 / var(--tw-border-opacity));
 }
 
+.bg-purple-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
+}
+
 .py-14{
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .font-lato{
@@ -686,8 +787,59 @@ video {
   line-height: 2rem;
 }
 
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-black{
   font-weight: 900;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.leading-\[\]{
+  line-height: ;
+}
+
+.leading-\[88px\]{
+  line-height: 88px;
+}
+
+.leading-7{
+  line-height: 1.75rem;
+}
+
+.leading-\[50px\]{
+  line-height: 50px;
+}
+
+.leading-\[60px\]{
+  line-height: 60px;
+}
+
+.leading-\[70px\]{
+  line-height: 70px;
+}
+
+.leading-\[7065\]{
+  line-height: 7065;
+}
+
+.leading-\[65px\]{
+  line-height: 65px;
 }
 
 .text-gray-950{
@@ -700,8 +852,56 @@ video {
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
+.text-zinc-500{
+  --tw-text-opacity: 1;
+  color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.text-zinc-700{
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+
+.text-zinc-900{
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
+}
+
+.text-zinc-200{
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity));
+}
+
+.text-zinc-300{
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px){
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .md\:leading-\[88px\]{
+    line-height: 88px;
+  }
+
+  .md\:leading-\[808px\]{
+    line-height: 808px;
   }
 }
