--- a/assets/output.css
+++ b/assets/output.css
@@ -671,6 +671,132 @@ video {
   }
 }
 
+.pet-card{
+  overflow: hidden;
+  border-radius: 0.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  padding: 1rem;
+}
+
+.pet-banner{
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+
+.pet-details-list{
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
+  li{
+    display: flex;
+  }
+  li{
+    align-items: center;
+  }
+  li{
+    gap: 0.5rem;
+  }
+  li {
+    img{
+      aspect-ratio: 1 / 1;
+    }
+    img{
+      width: 1.25rem;
+    }
+  }
+}
+
+.pet-btn-groups{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  .pet-btn{
+    border-radius: 0.375rem;
+  }
+  .pet-btn{
+    border-width: 2px;
+  }
+  .pet-btn{
+    --tw-border-opacity: 1;
+    border-color: rgb(207 250 254 / var(--tw-border-opacity));
+  }
+  .pet-btn{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .pet-btn{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .pet-btn{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .pet-btn{
+    font-weight: 700;
+  }
+  .pet-btn{
+    --tw-text-opacity: 1;
+    color: rgb(17 94 89 / var(--tw-text-opacity));
+  }
+  .pet-btn{
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+  .pet-btn:hover{
+    --tw-border-opacity: 1;
+    border-color: rgb(22 78 99 / var(--tw-border-opacity));
+  }
+  .pet-btn:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 94 89 / var(--tw-bg-opacity));
+  }
+  .pet-btn:hover{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+  .pet-btn {
+    &.thumb:hover{
+      background-color: transparent;
+    }
+  }
+}
+
+.loader {
+  width: 60px;
+  aspect-ratio: 2;
+  --g1: no-repeat radial-gradient(circle closest-side, #f72121 90%, #ed888800);
+  --g2: no-repeat radial-gradient(circle closest-side, #ff9d2d 90%, #ed888800);
+  --g3: no-repeat radial-gradient(circle closest-side, #0e7a81 90%, #ed888800);
+  background: var(--g1) 0% 50%, var(--g2) 50% 50%, var(--g3) 100% 50%;
+  background-size: calc(100% / 4) 50%;
+  animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+  20% {
+    background-position: 0% 0%, 50% 50%, 100% 50%;
+  }
+
+  40% {
+    background-position: 0% 100%, 50% 0%, 100% 50%;
+  }
+
+  60% {
+    background-position: 0% 50%, 50% 100%, 100% 0%;
+  }
+
+  80% {
+    background-position: 0% 50%, 50% 50%, 100% 100%;
+  }
+}
+
 .order-1{
   order: 1;
 }
@@ -707,24 +833,12 @@ video {
   margin-top: 4rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
-}
-
 .mt-4{
   margin-top: 1rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -749,10 +863,6 @@ video {
 
 .h-6{
   height: 1.5rem;
-}
-
-.h-96{
-  height: 24rem;
 }
 
 .max-h-\[450px\]{
@@ -787,16 +897,8 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-3{
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -809,10 +911,6 @@ video {
 
 .content-start{
   align-content: flex-start;
-}
-
-.items-start{
-  align-items: flex-start;
 }
 
 .items-center{
@@ -855,10 +953,6 @@ video {
   gap: 2rem;
 }
 
-.overflow-hidden{
-  overflow: hidden;
-}
-
 .rounded-full{
   border-radius: 9999px;
 }
@@ -867,40 +961,16 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .border-2{
   border-width: 2px;
-}
-
-.border{
-  border-width: 1px;
-}
-
-.border-4{
-  border-width: 4px;
-}
-
-.border-\[1px\]{
-  border-width: 1px;
-}
-
-.border-\[2px\]{
-  border-width: 2px;
-}
-
-.border-\[3px\]{
-  border-width: 3px;
 }
 
 .border-blue-100{
@@ -908,34 +978,14 @@ video {
   border-color: rgb(219 234 254 / var(--tw-border-opacity));
 }
 
-.border-slate-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
-}
-
-.border-green-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(187 247 208 / var(--tw-border-opacity));
-}
-
-.border-green-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(134 239 172 / var(--tw-border-opacity));
-}
-
-.border-green-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(220 252 231 / var(--tw-border-opacity));
-}
-
-.border-gray-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-slate-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
 .bg-gray-100{
@@ -948,29 +998,13 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.bg-red-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
 .bg-slate-950{
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
-.bg-violet-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(196 181 253 / var(--tw-bg-opacity));
-}
-
-.bg-green-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-blue-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+.p-2{
+  padding: 0.5rem;
 }
 
 .p-3{
@@ -983,10 +1017,6 @@ video {
 
 .p-8{
   padding: 2rem;
-}
-
-.p-2{
-  padding: 0.5rem;
 }
 
 .py-14{
@@ -1093,47 +1123,13 @@ video {
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
-.text-slate-400{
-  --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
-.text-slate-100{
-  --tw-text-opacity: 1;
-  color: rgb(241 245 249 / var(--tw-text-opacity));
-}
-
-.text-slate-200{
-  --tw-text-opacity: 1;
-  color: rgb(226 232 240 / var(--tw-text-opacity));
-}
-
-.text-slate-300{
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
-.text-slate-500{
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
-.text-slate-600{
-  --tw-text-opacity: 1;
-  color: rgb(71 85 105 / var(--tw-text-opacity));
-}
-
 @media (min-width: 768px){
   .md\:order-none{
     order: 0;
   }
 
-  .md\:col-span-4{
-    grid-column: span 4 / span 4;
-  }
-
-  .md\:col-span-8{
-    grid-column: span 8 / span 8;
+  .md\:col-span-6{
+    grid-column: span 6 / span 6;
   }
 
   .md\:row-start-auto{
@@ -1168,24 +1164,24 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .lg\:col-span-4{
+    grid-column: span 4 / span 4;
+  }
+
+  .lg\:col-span-8{
+    grid-column: span 8 / span 8;
   }
 
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1280px){
-  .xl\:grid{
-    display: grid;
-  }
-
   .xl\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
