--- a/assets/output.css
+++ b/assets/output.css
@@ -768,6 +768,31 @@ video {
   }
 }
 
+.pet-details-tags{
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+  li{
+    display: flex;
+  }
+  li{
+    align-items: center;
+  }
+  li{
+    gap: 0.5rem;
+  }
+  li {
+    img{
+      aspect-ratio: 1 / 1;
+    }
+    img{
+      width: 1.25rem;
+    }
+  }
+}
+
 .loader {
   width: 60px;
   aspect-ratio: 2;
@@ -797,6 +822,14 @@ video {
   }
 }
 
+.fixed{
+  position: fixed;
+}
+
+.inset-0{
+  inset: 0px;
+}
+
 .order-1{
   order: 1;
 }
@@ -821,6 +854,15 @@ video {
   grid-row-start: 1;
 }
 
+.m-6{
+  margin: 1.5rem;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mt-10{
   margin-top: 2.5rem;
 }
@@ -841,6 +883,14 @@ video {
   margin-top: 2rem;
 }
 
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -851,6 +901,10 @@ video {
 
 .aspect-square{
   aspect-ratio: 1 / 1;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
 }
 
 .h-14{
@@ -865,6 +919,10 @@ video {
   height: 1.5rem;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .max-h-\[450px\]{
   max-height: 450px;
 }
@@ -875,6 +933,24 @@ video {
 
 .w-36{
   width: 9rem;
+}
+
+.w-\[636px\]{
+  width: 636px;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.w-max{
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-min{
+  width: -moz-min-content;
+  width: min-content;
 }
 
 .min-w-72{
@@ -891,6 +967,26 @@ video {
 
 .max-w-\[80ch\]{
   max-width: 80ch;
+}
+
+.max-w-\[\]{
+  max-width: ;
+}
+
+.max-w-\[6\]{
+  max-width: 6;
+}
+
+.max-w-\[636\]{
+  max-width: 636;
+}
+
+.max-w-\[636px\]{
+  max-width: 636px;
+}
+
+.list-disc{
+  list-style-type: disc;
 }
 
 .grid-cols-1{
@@ -973,6 +1069,10 @@ video {
   border-width: 2px;
 }
 
+.border{
+  border-width: 1px;
+}
+
 .border-blue-100{
   --tw-border-opacity: 1;
   border-color: rgb(219 234 254 / var(--tw-border-opacity));
@@ -988,6 +1088,26 @@ video {
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
+.border-teal-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(20 184 166 / var(--tw-border-opacity));
+}
+
+.border-teal-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(94 234 212 / var(--tw-border-opacity));
+}
+
+.border-teal-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(204 251 241 / var(--tw-border-opacity));
+}
+
+.border-teal-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(153 246 228 / var(--tw-border-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -998,9 +1118,68 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-slate-900\/70{
+  background-color: rgb(15 23 42 / 0.7);
+}
+
 .bg-slate-950{
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-teal-950{
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 47 46 / var(--tw-bg-opacity));
+}
+
+.bg-teal-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 94 89 / var(--tw-bg-opacity));
+}
+
+.bg-teal-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
+}
+
+.bg-teal-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 120 87 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 95 70 / var(--tw-bg-opacity));
+}
+
+.bg-teal-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 251 241 / var(--tw-bg-opacity));
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-2{
@@ -1032,6 +1211,18 @@ video {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.ps-8{
+  padding-inline-start: 2rem;
+}
+
+.ps-6{
+  padding-inline-start: 1.5rem;
+}
+
+.ps-7{
+  padding-inline-start: 1.75rem;
 }
 
 .text-center{
@@ -1080,12 +1271,24 @@ video {
   font-weight: 700;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .leading-7{
   line-height: 1.75rem;
 }
 
 .leading-\[60px\]{
   line-height: 60px;
+}
+
+.leading-6{
+  line-height: 1.5rem;
+}
+
+.leading-3{
+  line-height: .75rem;
 }
 
 .text-gray-400{
@@ -1121,6 +1324,11 @@ video {
 .text-zinc-600{
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
+}
+
+.text-teal-600{
+  --tw-text-opacity: 1;
+  color: rgb(13 148 136 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
