--- a/src/input.css
+++ b/src/input.css
@@ -65,6 +65,18 @@
     }
   }
 
+  .pet-details-tags {
+    @apply text-gray-600 grid grid-cols-2 gap-2;
+
+    li {
+      @apply flex items-center gap-2;
+
+      img {
+        @apply w-5 aspect-square;
+      }
+    }
+  }
+
   .loader {
     width: 60px;
     aspect-ratio: 2;
