--- a/assets/output.css
+++ b/assets/output.css
@@ -793,6 +793,42 @@ video {
   }
 }
 
+.countdown{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 2rem;
+  h1{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+  h1{
+    font-weight: 900;
+  }
+  p{
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
+  }
+  .countdown__counter{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+  .countdown__counter{
+    font-weight: 900;
+  }
+  .countdown__counter{
+    --tw-text-opacity: 1;
+    color: rgb(3 7 18 / var(--tw-text-opacity));
+  }
+  img{
+    width: 3rem;
+  }
+}
+
 .loader {
   width: 60px;
   aspect-ratio: 2;
@@ -854,10 +890,6 @@ video {
   grid-row-start: 1;
 }
 
-.m-6{
-  margin: 1.5rem;
-}
-
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -875,20 +907,20 @@ video {
   margin-top: 4rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
+.mt-2{
+  margin-top: 0.5rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mt-4{
+  margin-top: 1rem;
 }
 
 .mt-6{
   margin-top: 1.5rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -943,16 +975,6 @@ video {
   width: 100%;
 }
 
-.w-max{
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-min{
-  width: -moz-min-content;
-  width: min-content;
-}
-
 .min-w-72{
   min-width: 18rem;
 }
@@ -961,28 +983,16 @@ video {
   max-width: 20ch;
 }
 
+.max-w-\[636px\]{
+  max-width: 636px;
+}
+
 .max-w-\[70ch\]{
   max-width: 70ch;
 }
 
 .max-w-\[80ch\]{
   max-width: 80ch;
-}
-
-.max-w-\[\]{
-  max-width: ;
-}
-
-.max-w-\[6\]{
-  max-width: 6;
-}
-
-.max-w-\[636\]{
-  max-width: 636;
-}
-
-.max-w-\[636px\]{
-  max-width: 636px;
 }
 
 .list-disc{
@@ -1069,10 +1079,6 @@ video {
   border-width: 2px;
 }
 
-.border{
-  border-width: 1px;
-}
-
 .border-blue-100{
   --tw-border-opacity: 1;
   border-color: rgb(219 234 254 / var(--tw-border-opacity));
@@ -1086,21 +1092,6 @@ video {
 .border-slate-200{
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
-}
-
-.border-teal-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(20 184 166 / var(--tw-border-opacity));
-}
-
-.border-teal-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(94 234 212 / var(--tw-border-opacity));
-}
-
-.border-teal-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(204 251 241 / var(--tw-border-opacity));
 }
 
 .border-teal-200{
@@ -1127,54 +1118,14 @@ video {
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-teal-950{
-  --tw-bg-opacity: 1;
-  background-color: rgb(4 47 46 / var(--tw-bg-opacity));
-}
-
-.bg-teal-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 94 89 / var(--tw-bg-opacity));
-}
-
-.bg-teal-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
-}
-
-.bg-teal-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(4 120 87 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 95 70 / var(--tw-bg-opacity));
-}
-
 .bg-teal-100{
   --tw-bg-opacity: 1;
   background-color: rgb(204 251 241 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -1211,14 +1162,6 @@ video {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.ps-8{
-  padding-inline-start: 2rem;
-}
-
-.ps-6{
-  padding-inline-start: 1.5rem;
 }
 
 .ps-7{
@@ -1275,20 +1218,16 @@ video {
   font-weight: 600;
 }
 
+.leading-6{
+  line-height: 1.5rem;
+}
+
 .leading-7{
   line-height: 1.75rem;
 }
 
 .leading-\[60px\]{
   line-height: 60px;
-}
-
-.leading-6{
-  line-height: 1.5rem;
-}
-
-.leading-3{
-  line-height: .75rem;
 }
 
 .text-gray-400{
@@ -1311,6 +1250,11 @@ video {
   color: rgb(51 65 85 / var(--tw-text-opacity));
 }
 
+.text-teal-600{
+  --tw-text-opacity: 1;
+  color: rgb(13 148 136 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1324,11 +1268,6 @@ video {
 .text-zinc-600{
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
-}
-
-.text-teal-600{
-  --tw-text-opacity: 1;
-  color: rgb(13 148 136 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
